--- a/style.css
+++ b/style.css
@@ -28,13 +28,25 @@ body {
 }
 
 .keys {
-    width: 100%;
     display: flex;
+    position: relative;
+    width: 100%;
 }
 
 .keys img {
     width: 50%;
-    margin: auto;
+}
+
+.small-key-num {
+    position: absolute;
+    left: 10%;
+    top: 50%;
+    transform: translate(0, -50%);
+
+    min-width: 30%;
+
+    text-align: center;
+    background-color: rgb(0, 0, 0, 0.8);
 }
 
 .item {
@@ -49,7 +61,7 @@ body {
     -webkit-filter: brightness(50%);
 }
 
-.item[data-value="0"] + span {
+.item[data-value="0"] + span, .item[data-value="0"][data-item="key-small"] ~ div {
     display: none;
 }
 
@@ -58,14 +70,14 @@ body {
     font-weight: 600;
     color: white;
     text-shadow: -1px 0 2px black, 1px 0 2px black, 0 -1px 2px black, 0 1px 2px black;
+    
+    pointer-events: none;
 }
 
 .count {
     position: absolute;
     right: 2px;
     bottom: 2px;
-    
-    pointer-events: none;
 }
 
 .dungeon-label {
