--- a/css/inventory.css
+++ b/css/inventory.css
@@ -1,50 +1,70 @@
-#inventory {
-    display: flex;
-    flex-direction: column;
+:root {
+    --table-padding: 8px;
+    --cell-padding: 2px;
+    --cell-mult: 1;
+    --cell-size: calc((100vh - 16px - (var(--table-padding) + var(--cell-padding) * 14) * 2) / 14 * var(--cell-mult));
+}
 
-    width: fit-content;
+body {
+    overflow-y: hidden;
+}
+
+table {
+    min-width: calc(var(--cell-size) * 6);
     max-height: calc(100vh - 16px);
+    height: 100%;
+
+    table-layout: fixed;
+    border-collapse: collapse;
+    border-spacing: 0;
 
     background-color: rgb(81, 81, 81);
+
 }
 
-.row {
+tr {
+    /* height: var(--cell-size); */
     display: flex;
-    max-width: calc((100vh - 16px) / 12.5 * 6);
+    padding: 0 var(--table-padding);
 }
 
-.numbered-item {
-    position: relative;
-    padding: 2px;
-    width: 100%;
+tr:first-child {
+    padding-top: var(--table-padding);
 }
 
-.keys {
+tr:last-child {
+    padding-bottom: var(--table-padding);
+}
+
+td {
     display: flex;
+    /* padding: var(--cell-padding); */
+    vertical-align: top;
+    padding: 0;
+    margin: 0;
+}
+
+td>div {
     position: relative;
+    width: var(--cell-size);
+    height: var(--cell-size);
+    padding: var(--cell-padding)
+}
+
+td img {
     width: 100%;
+    height: 100%;
+
+    object-fit: contain;
 }
 
-.keys img {
-    width: 50%;
-}
-
-.small-key-num {
-    position: absolute;
-    left: 10%;
-    top: 50%;
-    transform: translate(0, -50%);
-
-    min-width: 30%;
-
-    text-align: center;
-    background-color: rgb(0, 0, 0, 0.8);
+img {
+    display: block;
+    -webkit-user-select: none;
+    -moz-user-select: none;
 }
 
 .item {
-    display: block;
-    width: 100%;
-
     cursor: pointer;
 }
 
@@ -53,26 +73,53 @@
     -webkit-filter: brightness(50%);
 }
 
-.item[data-value="0"]+span,
-.item[data-value="0"][data-item="key-small"]~div {
+.item[data-value="0"]+.count {
     display: none;
 }
 
+.count,
+.song-label {
+    position: absolute;
+    right: 2px;
+    bottom: 0;
+}
+
+.count.key-label {
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 0 5%;
+    z-index: 1;
+    left: 14%;
+    right: initial;
+    bottom: 12%;
+}
+
+.item[data-value="0"]+.song-label {
+    filter: brightness(50%);
+    -webkit-filter: brightness(50%);
+}
+
 .item-label {
-    font-size: 1.5em;
+    font-size: calc(var(--cell-size) * 0.35);
     font-weight: 600;
     color: white;
     text-shadow: -1px 0 2px black, 1px 0 2px black, 0 -1px 2px black, 0 1px 2px black;
 
     pointer-events: none;
-}
-
-.count {
-    position: absolute;
-    right: 2px;
-    bottom: 2px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
 }
 
 .dungeon-label {
+    /* height: 50%; */
     text-align: center;
+    /* font-size: 130%; */
+}
+
+.keys {
+    display: flex;
+}
+
+.keys>img {
+    padding: 0;
+    width: 50%;
 }
