--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --page-margin: 8px;
+    --page-margin: 4px;
     --max-height: calc(100vh - var(--page-margin) * 2);
     --max-width: calc(100vw - var(--page-margin) * 2);
 }
@@ -9,8 +9,22 @@
 }
 
 body {
+    margin: var(--page-margin);
     overflow-y: hidden;
     max-height: var(--max-height);
+    background-color: darkgreen;
+}
+
+#main-body>div {
+    display: block;
+    --shadow-color-dark: rgb(0, 58, 0);
+    --shadow-color-light: rgb(0, 122, 0);
+    border: 4px solid var(--shadow-color-dark);
+    border-right-color: var(--shadow-color-light);
+    border-bottom-color: var(--shadow-color-light);
+
+    /* background-color: rgb(81, 81, 81); */
+    background-color: rgb(106, 112, 89);
 }
 
 .flex {
